src/snapshots/afrotd__parser__tests__interpretation_html_1.3.2_1.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 1.3.2.I
        </p>
    </div>
    <div class="message-body">
        <p>
            Beim vierten Down betritt der Kicker A1 das Spielfeld mit einem
            überprüften Spielball und verlangt vom Referee, diesen Ball gegen
            den auszutauschen, der beim vorherigen Down benutzt wurde.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Ersetzen dieses Balles wird nicht erlaubt.
            </p>
        </details>
    </div>
</article>
