src/snapshots/afrotd__parser__tests__interpretation_html_1.4.4_1.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 1.4.4.I
        </p>
    </div>
    <div class="message-body">
        <p>
            Ein Spieler trägt oder mehrere Spieler eines Teams tragen Leggings,
            die ihre Beine verdecken.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Legal. Alle anderen Teammitglieder dieses Teams müssen
                ebenfalls Leggings oder knielange Strümpfe (Stutzen) gleicher
                Farbe tragen. Alle Teammitglieder eines Teams müssen Strümpfe
                (Stutzen) oder Beinbekleidung tragen, die gleichfarbig, gleich
                lang und von gleichem Aussehen sind. Alle Teammitglieder eines
                Teams können kurze Socken tragen, die gleichfarbig, gleich lang
                und von gleichem Aussehen sind.
            </p>
        </details>
    </div>
</article>
