src/snapshots/afrotd__parser__tests__interpretation_html_1.4.7_1.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 1.4.7.I
        </p>
    </div>
    <div class="message-body">
        <p>
            A33 trägt ein Kopftuch unter seinem Helm, wobei ein Teil des
            Kopftuches unter der Rückseite des Helms herausragt.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Illegal. Kopftücher dürfen unter dem Helm getragen werden,
                solange kein Teil des Kopftuches unter dem Helm hervorragt,
                wenn dieser korrekt getragen wird. A33 muss das Feld für einen
                Down verlassen und darf erst wieder am Spiel teilnehmen, wenn
                das Kopftuch komplett unter dem Helm versteckt oder entfernt
                wurde. Team A kann ein Team Timeout nutzen, damit A33 auf dem
                Feld bleiben kann. Allerdings muss das Kopftuch während des
                Timeouts unter den Helm gesteckt oder entfernt werden.
            </p>
        </details>
    </div>
</article>
