src/snapshots/afrotd__parser__tests__interpretation_html_1.4.8_1.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 1.4.8.I
        </p>
    </div>
    <div class="message-body">
        <p>
            Nachdem der Ball spielbereit ist, erkennt ein Schiedsrichter, dass
            ein oder mehrere Spieler offensichtlich keinen Mundschutz tragen.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Der bzw. die Spieler müssen das Spiel für wenigstens einen Down
                verlassen und dürfen nicht eher zurückkehren, bis sie mit einem
                Mundschutz ausgerüstet sind. Der bzw. die Spieler können im
                Spiel bleiben, wenn das betreffende Team ein Timeout nimmt,
                aber sie dürfen auf keinen Fall spielen, bis sie korrekt
                ausgerüstet sind.
            </p>
        </details>
    </div>
</article>
