src/snapshots/afrotd__parser__tests__interpretation_html_10.1.5_2.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 10.1.5.II
        </p>
    </div>
    <div class="message-body">
        <p>
            Ein persönliches Foul mit oder ohne Disqualifikation ereignet sich
            bei einer Aktion nach einem Snap, der durchgeführt wurde, bevor der
            Ball für spielbereit erklärt wurde.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Es sollte jede Anstrengung unternommen werden, um so einen
                vorzeitigen Snap und die daraus resultierenden Aktionen zu
                verhindern. Aber wenn sich ein solches Foul ereignet, dann
                geschieht das zwischen den Downs. Wenn beide Fouls von Team A
                begangen wurden, werden beide Strafen durchgeführt. Wenn Team B
                das zweite Foul verursachte, werden beide Fouls durchgeführt,
                wobei Team A möglicherweise einen Vorteil von 10 Metern
                erreicht. Team B’s Foul enthält einen automatischen First Down.
            </p>
        </details>
    </div>
</article>
